--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Ilaria De Sio's Homepage
 page-top-title: Ilaria De Sio
-top-section-bg-text: Computer Science
-home-subtitle: Ilaria De Sio &ensp;|&ensp; Computer Science Student
+top-section-bg-text: Ilaria De Sio
+home-subtitle:
 copyright-text: "&copy; Ilaria De Sio 2024-2025. All Rights Reserved."
